Implement Security issues.

--- a/src/main/webapp/fcard.xhtml
+++ b/src/main/webapp/fcard.xhtml
@@ -55,7 +55,7 @@
 											 converterMessage="Please enter digits only." >
 									<f:validateLength minimum="1" maximum="2" />
 								</p:inputText>
-								<p:watermark for="estimate" value="ระยะเวลาที่ต้องการใช้ (วัน)" />
+								<p:watermark for="estimate" value="ระยะเวลาที่ต้องการใช้ (ชั่วโมง)" />
 							</div>
 						</div>
 						<div class="span4">
